--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "test:e2e:ui": "npx playwright test --ui"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.72.2",
+    "@types/yup": "^0.29.14",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "lucide-react": "^0.487.0",
     "next": "15.2.5",
     "next-auth": "^4.24.11",
@@ -26,9 +30,11 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
