--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:e2e:ui": "npx playwright test --ui"
   },
   "dependencies": {
+    "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.72.2",
     "@types/yup": "^0.29.14",
     "axios": "^1.8.4",
