--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
@@ -45,6 +45,7 @@
     "@tailwindcss/postcss": "^4.1.3",
     "@types/node": "^20",
     "@types/react": "19.1.0",
+    "@types/react-dom": "^19.1.2",
     "@typescript-eslint/parser": "^8.29.1",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
