--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "test:e2e:ui": "npx playwright test --ui"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.72.2",
     "@types/yup": "^0.29.14",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -32,6 +34,8 @@
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^19.1.0",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.2.0",
