--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.72.2",
+    "@types/react-datepicker": "^6.2.0",
     "@types/yup": "^0.29.14",
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
@@ -35,6 +36,7 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.3.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.1.0",
     "react-toastify": "^11.0.5",
